examples/misc/error/execution/index3.bfr
let main = $

$build {
  a: array(_) {
    x: cell;
    i: index;
  }
}

> a@i
+ a@i:(-2)x